# drf-oidc-auth

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yaml
oidc_auth/: settings.py  test.py
oidc_auth/authentication/: __init__.py  base.py  bearer.py  jwt.py
oidc_auth/utils/: __init__.py  allauth.py  caching.py  introspection_result.py
tests/: settings.py  test_allauth_integration.py  test_authentication.py  test_bearer_authentication.py  test_get_user_by_id.py  test_jwt_authentication.py  test_utils.py  urls.py  utils.py
